content/terraform-enterprise/1.1.x/docs/enterprise/releases/index.mdx
---
page_title: Releases - Terraform Enterprise
description: >-
  We ship a new Terraform Enterprise release each month. Find a list of recent
  releases and associated release notes.
---

# Terraform Enterprise Releases


<Note title="Upgrade Warning" variant="warning">
The Replicated deployment option is limited to customers who purchased Terraform Enterprise before January 2024. Terraform Enterprise now supports new deployment options and will end support for the Replicated Native Scheduler option.

The final Replicated release of Terraform Enterprise will be in March 2025. HashiCorp will support this release until April 1, 2026.

To ensure you continue to receive the latest features and fixes, please plan to migrate to a new deployment option by <strong>November 2024</strong>. For more information, refer to <a href="https://developer.hashicorp.com/terraform/enterprise/deploy">Terraform Enterprise deployment overview</a> or contact your HashiCorp account representative.
</Note>


The following table shows Terraform Enterprise releases, deployment methods, and prerequisites. Each version links to detailed release notes, which are also available in the sidebar navigation.

<Tip title="Plan your upgrade path">
Review <a href="/terraform/enterprise/deploy/manage/upgrade#select-a-target-version">Select a target version</a> before you schedule downtime. The sequence walks you through compatibility validation, image staging, and rollback planning. Use the <strong>Last required release</strong> marker, which appears in the release tables on version-specific pages (for example, <code>/terraform/enterprise/releases/1.1.x</code>), to list the mandatory intermediate releases from your current version to the target version, and stage artifacts for every intermediate release in the sequence.
</Tip>


<Tabs>
  <Tab heading="Kubernetes">

Below is a list of the most recent Terraform Enterprise Releases that can deploy Terraform Enterprise natively in a Kubernetes environment. [Learn more about flexible deployment options](/terraform/enterprise/deploy/).

| Version           | OpenShift Enabled | Linked <br />Terraform CLI\**                                     | Sentinel                                                                    | Tested Kubernetes Versions (EKS, AKS, GKE) | Helm Chart Version |
| ----------------- | --- |------------------------------------------------------------------- | --------------------------------------------------------------------------- | ------------------------------ | ------------------ |
| [1.1.x](/terraform/enterprise/releases/1.1.x)   | *yes* | [1.13.4](https://github.com/hashicorp/terraform/releases/tag/v1.13.4) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  |  (see details on [1.1.x](/terraform/enterprise/releases/1.1.x) page)                 | (see details on [1.1.x](/terraform/enterprise/releases/1.1.x) page) |
| [1.0.x](/terraform/enterprise/releases/1.0.x)   | *yes* | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  |  (see details on [1.0.x](/terraform/enterprise/releases/1.0.x) page)                 | (see details on [1.0.x](/terraform/enterprise/releases/1.0.x) page) |
| [v202507-1](/terraform/enterprise/releases/2025/v202507-1)   | *yes* | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  |  [1.33](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.33](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.32](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.6.4](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.6.4)       |
| [v202506-1](/terraform/enterprise/releases/2025/v202506-1)   | *yes* | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  |  [1.33](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.33](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.32](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.6.3](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.6.3)       |
| [v202505-1](/terraform/enterprise/releases/2025/v202505-1)   | *yes* | [1.11.4](https://github.com/hashicorp/terraform/releases/tag/v1.11.4) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  |  [1.32](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.32](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.32](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.6.2](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.6.2)       |
| [v202504-1](/terraform/enterprise/releases/2025/v202504-1)   | *yes* | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  |  [1.32](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.32](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.32](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.6.1](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.6.1)       |
| [v202503-1](/terraform/enterprise/releases/2025/v202503-1)   | *yes* | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  |  [1.32](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.31](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.32](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.6.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.6.0)       |
| [v202502-2](/terraform/enterprise/releases/2025/v202502-2)   | *yes* | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  |  [1.32](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.31](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.32](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.5.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.5.0)       |
| [v202502-1](/terraform/enterprise/releases/2025/v202502-1)   | *yes* | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  |  [1.32](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.31](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.32](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.5.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.5.0)       |
| [v202501-1](/terraform/enterprise/releases/2025/v202501-1)   | *yes* | [1.10.1](https://github.com/hashicorp/terraform/releases/tag/v1.10.1) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  |  [1.31](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.31](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.31](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.4.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.4.0)       |
| [v202411-2](/terraform/enterprise/releases/2024/v202411-2)   | *yes* | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  |  [1.31](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.31](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.30.5](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.4](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.4)       |
| [v202411-1](/terraform/enterprise/releases/2024/v202411-1)   | *yes* | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  |  [1.31](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.31](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.30.5](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.4](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.4)       |
| [v202410-1](/terraform/enterprise/releases/2024/v202410-1)   | *yes* | [1.9.6](https://github.com/hashicorp/terraform/releases/tag/v1.9.6) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.30](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.3](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.3)       |
| [v202409-3](/terraform/enterprise/releases/2024/v202409-3)   | *yes* | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.29.1](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.2](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.2)       |
| [v202409-2](/terraform/enterprise/releases/2024/v202409-2)   | *yes* | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.29.1](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.2](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.2)       |
| [v202409-1](/terraform/enterprise/releases/2024/v202409-1)   | *yes* | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.29.1](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.2](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.2)       |
| [v202408-1](/terraform/enterprise/releases/2024/v202408-1)   | *yes* | [1.9.2](https://github.com/hashicorp/terraform/releases/tag/v1.9.2) | [0.26.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-1-may-22-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.29.1](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.1](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.1)       |
| [v202407-1](/terraform/enterprise/releases/2024/v202407-1)   | *yes* | [1.8.5](https://github.com/hashicorp/terraform/releases/tag/v1.8.5) | [0.26.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-1-may-22-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.29.1](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.0)       |
| [v202406-1](/terraform/enterprise/releases/2024/v202406-1)*  | *yes* | [1.8.3](https://github.com/hashicorp/terraform/releases/tag/v1.8.3) | [0.26.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-15-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.29.1](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.3.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.3.0)       |
| [v202405-1](/terraform/enterprise/releases/2024/v202405-1)  | *no* | [1.8.2](https://github.com/hashicorp/terraform/releases/tag/v1.8.2) | [0.25.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-25-1-apr-18-2024)  |  [1.29](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.29](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.29.1](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.2.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.2.0)       |
| [v202404-2](/terraform/enterprise/releases/2024/v202404-2)  | *no* | [1.8.1](https://github.com/hashicorp/terraform/releases/tag/v1.8.1) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  |  [1.28](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.28](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.28.3](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.2.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.2.0)       |
| [v202404-1](/terraform/enterprise/releases/2024/v202404-1)+ | *no* | [1.8.1](https://github.com/hashicorp/terraform/releases/tag/v1.8.1) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  |  [1.28](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.28](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.28.3](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.2.0](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.2.0)       |
| [v202402-2](/terraform/enterprise/releases/2024/v202402-2)  | *no* | [1.7.4](https://github.com/hashicorp/terraform/releases/tag/v1.7.4) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  |  [1.28](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.28](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.28.3](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.1.1](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.1.1)       |
| [v202402-1](/terraform/enterprise/releases/2024/v202402-1)  | *no* | [1.7.4](https://github.com/hashicorp/terraform/releases/tag/v1.7.4) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  |  [1.28](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.28](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.28.3](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.1.1](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.1.1)       |
| [v202401-2](/terraform/enterprise/releases/2024/v202401-2)  | *no* | [1.7.1](https://github.com/hashicorp/terraform/releases/tag/v1.7.1) | [0.23.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-1-jan-19-2024)  |  [1.28](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.28](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.28.3](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.1.1](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.1.1)       |
| [v202401-1](/terraform/enterprise/releases/2024/v202401-1)  | *no* | [1.7.1](https://github.com/hashicorp/terraform/releases/tag/v1.7.1) | [0.23.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-1-jan-19-2024)  |  [1.28](https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html), [1.28](https://learn.microsoft.com/en-us/azure/aks/supported-kubernetes-versions?tabs=azure-cli#aks-kubernetes-release-calendar), [1.28.3](https://cloud.google.com/kubernetes-engine/docs/release-notes)                  | [1.1.1](https://github.com/hashicorp/terraform-enterprise-helm/releases/tag/v1.1.1)       |

  </Tab>
  <Tab heading="Docker">

Below is a list of the most recent Terraform Enterprise Releases that can deploy Terraform Enterprise natively using Docker. [Learn more about flexible deployment options](/terraform/enterprise/deploy/).

| Version           | Linked <br />Terraform CLI\**                                     | Sentinel                                                                    | Recommended Docker Compose version |
| ----------------- | ------------------------------------------------------------------- | --------------------------------------------------------------------------- | ---------------------------------- |
| [1.1.x](/terraform/enterprise/releases/1.1.x)    | [1.13.4](https://github.com/hashicorp/terraform/releases/tag/v1.13.4) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [1.0.x](/terraform/enterprise/releases/1.0.x)    | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202507-1](/terraform/enterprise/releases/2025/v202507-1)   | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202506-1](/terraform/enterprise/releases/2025/v202506-1)   | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202505-1](/terraform/enterprise/releases/2025/v202505-1)   | [1.11.4](https://github.com/hashicorp/terraform/releases/tag/v1.11.4) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202504-1](/terraform/enterprise/releases/2025/v202504-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202503-1](/terraform/enterprise/releases/2025/v202503-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202502-2](/terraform/enterprise/releases/2025/v202502-2)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202502-1](/terraform/enterprise/releases/2025/v202502-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202501-1](/terraform/enterprise/releases/2025/v202501-1)   | [1.10.1](https://github.com/hashicorp/terraform/releases/tag/v1.10.1) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202411-2](/terraform/enterprise/releases/2024/v202411-2)   | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202411-1](/terraform/enterprise/releases/2024/v202411-1)   | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202410-1](/terraform/enterprise/releases/2024/v202410-1)   | [1.9.6](https://github.com/hashicorp/terraform/releases/tag/v1.9.6) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202409-3](/terraform/enterprise/releases/2024/v202409-3)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202409-2](/terraform/enterprise/releases/2024/v202409-2)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202409-1](/terraform/enterprise/releases/2024/v202409-1)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202408-1](/terraform/enterprise/releases/2024/v202408-1)   | [1.9.2](https://github.com/hashicorp/terraform/releases/tag/v1.9.2) | [0.26.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-22-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202407-1](/terraform/enterprise/releases/2024/v202407-1)   | [1.8.5](https://github.com/hashicorp/terraform/releases/tag/v1.8.5) | [0.26.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-22-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202406-1](/terraform/enterprise/releases/2024/v202406-1)*  | [1.8.3](https://github.com/hashicorp/terraform/releases/tag/v1.8.3) | [0.26.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-15-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202405-1](/terraform/enterprise/releases/2024/v202405-1)  | [1.8.2](https://github.com/hashicorp/terraform/releases/tag/v1.8.2) | [0.25.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-25-1-apr-18-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202404-2](/terraform/enterprise/releases/2024/v202404-2)  | [1.8.1](https://github.com/hashicorp/terraform/releases/tag/v1.8.1) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202404-1](/terraform/enterprise/releases/2024/v202404-1)+  | [1.8.1](https://github.com/hashicorp/terraform/releases/tag/v1.8.1) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202402-2](/terraform/enterprise/releases/2024/v202402-2)  | [1.7.4](https://github.com/hashicorp/terraform/releases/tag/v1.7.4) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202402-1](/terraform/enterprise/releases/2024/v202402-1)  | [1.7.4](https://github.com/hashicorp/terraform/releases/tag/v1.7.4) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202401-2](/terraform/enterprise/releases/2024/v202401-2)  | [1.7.1](https://github.com/hashicorp/terraform/releases/tag/v1.7.1) | [0.23.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-1-jan-19-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |
| [v202401-1](/terraform/enterprise/releases/2024/v202401-1)  | [1.7.1](https://github.com/hashicorp/terraform/releases/tag/v1.7.1) | [0.23.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-1-jan-19-2024)  | [V2](https://docs.docker.com/compose/migrate/)                       |

  </Tab>
  <Tab heading="Podman">

Below is a list of the most recent Terraform Enterprise Releases that can deploy Terraform Enterprise natively using Podman. [Learn more about flexible deployment options](/terraform/enterprise/deploy/).

| Version           | Linked <br />Terraform CLI\**                                     | Sentinel                                                                    | Tested Podman version |
| ----------------- | ------------------------------------------------------------------- | --------------------------------------------------------------------------- | ---------------------------------- |
| [1.1.x](/terraform/enterprise/releases/1.1.x)   | [1.13.4](https://github.com/hashicorp/terraform/releases/tag/v1.13.4) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [v5](https://github.com/containers/podman/releases/tag/v5.6.0)                       |
| [1.0.x](/terraform/enterprise/releases/1.0.x)   | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202507-1](/terraform/enterprise/releases/2025/v202507-1)   | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202506-1](/terraform/enterprise/releases/2025/v202506-1)   | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202505-1](/terraform/enterprise/releases/2025/v202505-1)   | [1.11.4](https://github.com/hashicorp/terraform/releases/tag/v1.11.4) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202504-1](/terraform/enterprise/releases/2025/v202504-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202503-1](/terraform/enterprise/releases/2025/v202503-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202502-2](/terraform/enterprise/releases/2025/v202502-2)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202502-1](/terraform/enterprise/releases/2025/v202502-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | [v5](https://github.com/containers/podman/releases/tag/v5.0.0)                       |
| [v202501-1](/terraform/enterprise/releases/2025/v202501-1)   | [1.10.1](https://github.com/hashicorp/terraform/releases/tag/v1.10.1) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202411-2](/terraform/enterprise/releases/2024/v202411-2)   | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202411-1](/terraform/enterprise/releases/2024/v202411-1)   | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202410-1](/terraform/enterprise/releases/2024/v202410-1)   | [1.9.6](https://github.com/hashicorp/terraform/releases/tag/v1.9.6) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202409-3](/terraform/enterprise/releases/2024/v202409-3)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202409-2](/terraform/enterprise/releases/2024/v202409-2)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202409-1](/terraform/enterprise/releases/2024/v202409-1)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202408-1](/terraform/enterprise/releases/2024/v202408-1)   | [1.9.2](https://github.com/hashicorp/terraform/releases/tag/v1.9.2) | [0.26.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-22-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202407-1](/terraform/enterprise/releases/2024/v202407-1)   | [1.8.5](https://github.com/hashicorp/terraform/releases/tag/v1.8.5) | [0.26.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-22-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202406-1](/terraform/enterprise/releases/2024/v202406-1)*  | [1.8.3](https://github.com/hashicorp/terraform/releases/tag/v1.8.3) | [0.26.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-15-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202405-1](/terraform/enterprise/releases/2024/v202405-1)  | [1.8.2](https://github.com/hashicorp/terraform/releases/tag/v1.8.2) | [0.25.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-25-1-apr-18-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202404-2](/terraform/enterprise/releases/2024/v202404-2)  | [1.8.1](https://github.com/hashicorp/terraform/releases/tag/v1.7.4) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |
| [v202404-1](/terraform/enterprise/releases/2024/v202404-1)+  | [1.8.1](https://github.com/hashicorp/terraform/releases/tag/v1.7.4) | [0.24.2](https://developer.hashicorp.com/sentinel/docs/changelog#0-24-2-jan-31-2024)  | [v4.3.0](https://podman.io/release/2022/10/22/podman-release-v4.3.0)                       |

  </Tab>

  <Tab heading="Nomad">

Below is a list of the most recent Terraform Enterprise Releases that can deploy Terraform Enterprise natively using Nomad. [Learn more about flexible deployment options](/terraform/enterprise/flexible-deployments/).

| Version           | Linked <br />Terraform CLI\**                                       | Sentinel                                                                    | Tested Nomad versions       | Min supported version |
| ----------------- | ------------------------------------------------------------------- | --------------------------------------------------------------------------- | --------------------------- | --------------------- |
| [1.1.x](/terraform/enterprise/releases/1.1.x)    | [1.13.4](https://github.com/hashicorp/terraform/releases/tag/v1.13.4) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | 1.7 | 1.5 |
| [1.0.x](/terraform/enterprise/releases/1.0.x)    | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | 1.7 | 1.5 |
| [v202507-1](/terraform/enterprise/releases/2025/v202507-1)   | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | 1.7 | 1.5 |
| [v202506-1](/terraform/enterprise/releases/2025/v202506-1)   | [1.12.1](https://github.com/hashicorp/terraform/releases/tag/v1.12.1) | [0.40.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-40-0-may-12-2025)  | 1.7 | 1.5 |
| [v202505-1](/terraform/enterprise/releases/2025/v202505-1)   | [1.11.4](https://github.com/hashicorp/terraform/releases/tag/v1.11.4) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | 1.7 | 1.5 |
| [v202504-1](/terraform/enterprise/releases/2025/v202504-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | 1.7 | 1.5 |
| [v202503-1](/terraform/enterprise/releases/2025/v202503-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.30.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-30-0-february-17-2025)  | 1.7 | 1.5 |
| [v202502-2](/terraform/enterprise/releases/2025/v202502-2)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | 1.7 | 1.5 |
| [v202502-1](/terraform/enterprise/releases/2025/v202502-1)   | [1.10.5](https://github.com/hashicorp/terraform/releases/tag/v1.10.5) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | 1.7 | 1.5 |
| [v202501-1](/terraform/enterprise/releases/2025/v202501-1)   | [1.10.1](https://github.com/hashicorp/terraform/releases/tag/v1.10.1) | [0.29.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-29-0-november-26-2024)  | 1.7 | 1.5 |
| [v202411-2](/terraform/enterprise/releases/2024/v202411-2)   | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | 1.5, 1.6, 1.7 | 1.5 |
| [v202411-1](/terraform/enterprise/releases/2024/v202411-1)   | [1.9.8](https://github.com/hashicorp/terraform/releases/tag/v1.9.8) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | 1.5, 1.6, 1.7 | 1.5 |
| [v202410-1](/terraform/enterprise/releases/2024/v202410-1)   | [1.9.6](https://github.com/hashicorp/terraform/releases/tag/v1.9.6) | [0.28.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-28-0-september-26-2024)  | 1.5, 1.6, 1.7 | 1.5 |
| [v202409-3](/terraform/enterprise/releases/2024/v202409-3)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | 1.5, 1.6, 1.7 | 1.5 |
| [v202409-2](/terraform/enterprise/releases/2024/v202409-2)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | 1.5, 1.6, 1.7 | 1.5 |
| [v202409-1](/terraform/enterprise/releases/2024/v202409-1)   | [1.9.5](https://github.com/hashicorp/terraform/releases/tag/v1.9.5) | [0.27.0](https://developer.hashicorp.com/sentinel/docs/changelog#0-27-0-august-7-2024)  | 1.5, 1.6, 1.7 | 1.5 |
| [v202408-1](/terraform/enterprise/releases/2024/v202408-1)   | [1.9.2](https://github.com/hashicorp/terraform/releases/tag/v1.9.2) | [0.26.1](https://developer.hashicorp.com/sentinel/docs/changelog#0-26-0-may-22-2024)  | 1.5, 1.6, 1.7 | 1.5 |

  </Tab>

</Tabs>
